# CG

Labs/Lab01/Hexagon/: CMakeLists.txt  main.cpp
Labs/Lab02/RectangleR/: CMakeLists.txt  main.cpp
Labs/Lab03/RectangleR_Shaders/: CMakeLists.txt  main.cpp
Labs/Lab04/Cylinder_BSpline/: CMakeLists.txt  main.cpp
Labs/Lab05/ConeCylinder/: CMakeLists.txt  main.cpp
Labs/Lab06/Moving/: CMakeLists.txt  main.cpp
Reports/: Lab02_CG.docx  Lab03_CG.docx  Lab04_CG.docx  Lab05_CG.docx  Lab06_CG.docx  ~$b02_CG.docx
